<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:layout_gravity="center"
android:layout_marginTop="30dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableTop="@mipmap/intercept_register_line_weixin"
    android:drawablePadding="5dp"
    android:text="@string/login_weixin"
    android:textSize="12sp"
    android:layout_marginRight="40dp"
    android:gravity="center" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableTop="@mipmap/intercept_register_line_qq"
    android:drawablePadding="5dp"
    android:text="@string/login_qq"
    android:textSize="12sp"
    android:gravity="center"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:drawableTop="@mipmap/intercept_register_line_weibo"
    android:drawablePadding="5dp"
    android:text="@string/login_weibo"
    android:layout_marginLeft="40dp"
    android:textSize="12sp"
    android:gravity="center"/>
</LinearLayout>
</merge>