<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_login"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/intercept_register_line_weixin"
            android:drawablePadding="5dp"
            android:text="@string/login_weixin"
            android:textSize="12sp"
            android:layout_marginRight="40dp"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/intercept_register_line_qq"
            android:drawablePadding="5dp"
            android:text="@string/login_qq"
            android:textSize="12sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/intercept_register_line_weibo"
            android:drawablePadding="5dp"
            android:text="@string/login_weibo"
            android:layout_marginLeft="40dp"
            android:textSize="12sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <View
            android:layout_width="70dp"
            android:layout_height="2px"
            android:background="#c7c7c7"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/login_name_pass"
            android:textSize="15sp"
            android:textColor="#c7c7c7"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="70dp"
            android:layout_height="2px"
            android:background="#c7c7c7"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_textview_shape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账号"
            android:paddingLeft="7dp"
            android:paddingRight="10dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/user_name"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@null"
            android:textSize="16sp"
            android:hint="请输入您的账号"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/login_textview_shape">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密码"
                android:paddingLeft="7dp"
                android:paddingRight="10dp"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/user_pass"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@null"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:hint="请输入您的密码"/>
        </LinearLayout>
    </FrameLayout>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:text="登录"
        android:textSize="16sp"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/login_button_shape"
        style="?android:borderlessButtonStyle"/>
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/go_logon"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:text="注册账号"/>
        <TextView
            android:id="@+id/go_reset"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:text="忘记密码？"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="157dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:button="@drawable/login_share_to_commt"
            android:checked="true"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:text="分享至社区"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="注册代表你已同意注册社区和隐私协议"/>
</LinearLayout>