<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/note_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/note_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:contentScrim="@color/xhsColor"
            app:statusBarScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <com.apple.util.MyViewPager
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-23dp"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.8">
            </com.apple.util.MyViewPager>
            <android.support.v7.widget.Toolbar
                android:id="@+id/note_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@mipmap/common_head_btn_back_white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                <android.support.v7.widget.ButtonBarLayout
                    android:id="@+id/playButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone">
                    <me.xiaopan.sketch.SketchImageView
                        android:id="@+id/userheadimage_toolbar"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/xy_walkthroughs_account"/>
                    <TextView
                        android:id="@+id/username_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:text="茶小翁"
                        android:textSize="15sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp" />
                </android.support.v7.widget.ButtonBarLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp">
                <me.xiaopan.sketch.SketchImageView
                    android:id="@+id/userheadimage_context"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/xy_walkthroughs_account"/>
                <TextView
                    android:id="@+id/username_context"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="茶小翁"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp" />
                <Button
                    android:onClick="guanZhu"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:text="+ 关注"
                    android:textColor="@color/xhsColor"
                    android:gravity="center"
                    android:background="@drawable/addguanzhu_buttonshape"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#d9d8d8"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/user_notetitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_marginTop="12dp"
                android:text="这个标题起名不好"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/user_notecontext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:text="发布于"
                    android:textSize="13sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:drawableLeft="@drawable/ic_note_detail_location"
                    android:drawablePadding="3dp"
                    android:text="武汉市 武汉华清远见"
                    android:textSize="13sp"
                    android:textColor="#4A7DDA"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:paddingRight="12dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="07-28"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/note_beishoucang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="90次收藏"
                    android:textSize="13sp"
                    android:layout_toLeftOf="@+id/note_beidianzan"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/note_beidianzan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="42次赞"
                    android:textSize="13sp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="15dp"
                android:background="@color/backgroundcolor"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/explore_label_ic"
                    android:drawablePadding="10dp"
                    android:text="笔记评论"
                    android:textSize="13sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/right_arrow_small"
                    android:drawablePadding="5dp"
                    android:text="共12条评论"
                    android:textSize="13sp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#d9d8d8"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <me.xiaopan.sketch.SketchImageView
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:src="@drawable/xy_walkthroughs_account"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="7"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/note_edittextshape">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingLeft="5dp"
                        android:background="@null"
                        android:hint="分享你的人生"
                        android:textSize="14sp"/>
                </LinearLayout>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_weight="1.5"
                    android:text="发布"
                    android:textSize="13sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/note_pinglun_fabu"
                    style="?android:borderlessButtonStyle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <me.xiaopan.sketch.SketchImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/xy_walkthroughs_account"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="茶小翁"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/notetestcontext"
                    android:maxLines="3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="40dp"
                    android:text="2017-8-1"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <me.xiaopan.sketch.SketchImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/xy_walkthroughs_account"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="茶小翁"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/notetestcontext2"
                    android:maxLines="3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="40dp"
                    android:text="2017-8-1"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <me.xiaopan.sketch.SketchImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/xy_walkthroughs_account"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="茶小翁"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/notetestcontext3"
                    android:maxLines="3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="40dp"
                    android:text="2017-8-1"
                    android:textSize="12sp" />
            </LinearLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>